Reduced margin on social-media icons at intermediate sizes to avoid wrapping.

--- a/src/css/trilogy/_buttons.scss
+++ b/src/css/trilogy/_buttons.scss
@@ -14,7 +14,9 @@
 	padding: .5rem .7rem;
 	margin: 0 0.25rem;
 	transition: fill 0.5s cubic-bezier(0.5, 1.65, 0.4, 0.8), transform 0.5s cubic-bezier(0.5, 1.65, 0.4, 0.8)
-	@media (min-width: 768px) and (max-width: 800px) {
+}
+@media (min-width: 768px) and (max-width: 800px) {
+	.social-link {
 		margin: 0 0.15rem;
 	}
 }
